# RPy

./: .gitignore  GETTING_STARTED.md  LICENSE  README.md  out_containers.lua  out_for_else.lua  out_match.lua  out_sets.lua  out_try.lua  pyproject.toml  requirements.txt  setup_dev_environment.md  test_containers.py  test_imports.py  test_output.txt
DocumentationSite/: index.html  package-lock.json  package.json
ROJO-test/: .gitignore  README.md  default.project.backup.json  default.project.json  rpy.json
cli/: __init__.py  main.py
docs/: developer_guide.md  runtime_api.md  runtime_api.txt  semantic_map.md  semantic_map.txt  supported_subset.md  supported_subset.txt
examples/: demo.lua  demo.py  demo_typed.lua  enemy_class.py  hello_world.py  npc_movement.py  player_loop.py  simple_part_spawn.py
plugin/: init.lua
runtime/: python_runtime.lua
sdk/: __init__.py  math.py  roblox.py  string.py  table.py  task.py
server/: __init__.py  lsp_server.py
sync/: __init__.py  coordinator.py  server.py  watcher.py
tests/: test_golden.py
tmp/: npc_movement.lua
transpiler/: __init__.py  analyzer.py  api_metadata.json  ast_utils.py  cache_manager.py  cfg.py  cfg_builder.py  cfg_optimizer.py  closure_opt.py  compile_time_worker.py  dependency_graph.py  diagnostics.py  errors.py  escape_analysis.py  flags.py  generator.py  handlers.py  ir.py  ir_optimizer.py  ir_transformer.py  linearizer.py  linter.py  luau_ast.py  metadata_updater.py  node_registry.py  package_manager.py  parser.py  printer.py  project_context.py  query_service.py  restructurer.py  sra.py  ssa.py  (+3 more)
(+45 files in other folders)
