[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpy"
version = "0.6.0"
description = "Python-to-Roblox Luau transpiler"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["roblox", "luau", "transpiler", "compiler", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "watchdog>=3.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
rpy = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["transpiler*", "sdk*", "cli*", "runtime*", "sync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
